fixes for aggregate index COUNT and COUNT_NOT_NULL (#1909)
* * fixes for aggregate index COUNT and COUNT_NOT_NULL.

* review comments

Co-authored-by: Youssef Hatem <y_hatem@apple.com>